# dev-health-ops

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitleaksignore  .pip-audit-ignore  AGENTS-WG.md  AGENTS.md  DESIGN.md  GETTING-STARTED.md  LICENSE.md  Makefile  README.md  biome.json  cli.py  compose.yml  go.mod  go.sum  investment_taxonomy.py  latest  lefthook.yml  mkdocs.prototype.yml  mkdocs.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  storage.py  utils.py  versions.json  wrangler.jsonc
.beads/: issues.jsonl
.claude/: settings.json
.claude/agents/: security-reviewer.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/docs-legacy/: alerting.md  architecture.md  coverage-matrix.md  design-system.md  external-link-allowlist.yml  freshness-inventory.yml  getting-started.md  graphql.md  index.md  metrics-inventory.md  metrics.md  mkdocs.yml  search-acceptance.json  slos.md  task_trackers.md  team-configuration.md  webhooks.md
.github/documentation-program/: README.md  content-model.md  current-preview-baseline.md  gitlab-pattern-audit.md  ia-diagrams.md  phase-3-approval-checklist.md  reader-tasks.md  style-guide.md  templates.md
.github/pr-bodies/: unified-docs-foundation.md  user-guide-coverage.md
.github/workflows/: _pick-runner.yml  agent-refresh-doc-inventory.yml  auto-release.yml  canonical-docs-sync.yml  claude-code-review.yml  cloud-deploy.yml  codeql-analysis.yml  docker-images.yml  docs-cloudflare.yml  docs-guards.yml  docs-health-report.yml  docs-inventory-fix-types-once.yml  docs-inventory-format-once.yml  docs-inventory-mypy-report.yml  docs-inventory-reconcile-once.yml  docs-inventory-review.yml  docs-phase10-autoformat.yml  docs-phase10-final-format.yml  docs-phase10-lint-fix.yml  docs-phase11-format.yml  docs-phase11-lint-fix.yml  docs-prototype.yml  docs-release.yml  finish-canonical-docs.yml  fixtures-db-test.yml  go.yml  governance.yml  integration.yml  lint.yml  live-e2e.yml  pr1256-canonical-migration.yml  pr1256-docs-finalize.yml  promote-docs-canonical.yml  publish-on-tag.yml  publish-pypi.yml  ruff-format-probe.yml  run-docs-promotion.yml  scheduled-scan.yml  (+3 more)
.planning/: REFACTORING_PLAN.md
alerts/: rules.yml
analytics/: complexity.py  investment_mix_explain_prompt.txt  investment_mix_explainer.py  work_unit_explainer.py  work_units.py
api/: main.py  runner.py
audit/: completeness.py  coverage.py  perf.py  schema.py
ci/: check_go.sh  check_go_containers.sh  check_governance_gate.py  check_river_compat_static.sh  local_validate.sh  run_live_backend_e2e.sh  run_tests.sh
connectors/: base.py  github.py  gitlab.py
docker/: Dockerfile  go-worker.Dockerfile  init-extra-dbs.sh
docs/: PRIVATE_REPO_TESTING.md  _headers  architecture.md  cli.md  configuration.md  context-fabric-local.md  design-system.md  email-setup.md  getting-started.md  grafana.md  graphql.md  index.md  metrics-inventory.md  metrics.md  publication.yml  roadmap.md  search-acceptance.json  self-hosted-quickstart.md  sso-setup.md  task_trackers.md  team-configuration.md  webhooks.md
docs-prototype/: design-directions.md  index.md  robots.txt
docs-qa/: README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
examples/: batch_processing_example.py  github_example.py  gitlab_example.py  integration_example.py  private_repo_example.py
fixtures/: generator.py  runner.py
latest/: 404.html  index.html
metrics/: compute.py  compute_ic.py  identity.py  job_complexity_db.py  job_daily.py  job_work_items.py  schemas.py
models/: work_items.py
processors/: gitlab.py  sync.py
providers/: teams.py
scripts/: .disposition-payload-00.b64  .disposition-payload-01.b64  .disposition-payload-02.b64  .disposition-payload-03.b64  .disposition-payload-04.b64  auto_tag.py  build_docs_cloudflare.py  check_built_site_links.py  check_code_prerequisites.py  check_docs_candidate_accessibility.py  check_docs_candidate_facts.py  check_docs_candidate_search.py  check_docs_cloudflare_host.py  check_docs_links.py  check_external_links.py  check_freshness_inventory.py  check_investment_docs_drift.py  compute_metrics_daily.py  context-fabric-kubernetes.sh  context-fabric-local.sh  docs_inventory_review.py  docs_inventory_v2.py  docs_publication.py  export_report_metric_registry.py  gen_taxonomy_docs.py  mkdocs_migrated_source_links.py  pr1256_finalize_docs.py  prepare_docs_cloudflare.py  read_wrangler_output.py  reconcile_docs_inventory_once.py  reencrypt_settings_credentials.py  render_workspace_agents.py  run_metrics.py  strip_agent_attribution.py  user_guide_evidence_contract.py  user_guide_evidence_validation.py  validate_docs_ia_v2.py  validate_docs_inventory_review.py  validate_docs_v2_publication.py  validate_user_guide_evidence.py  (+2 more)
tests/: _clickhouse_team_store.py  _complexity_readiness_fixtures.py  _helpers.py  _helpers_external_ingest.py  canonical_incident_dispatch_support.py  canonical_incident_orchestration_support.py  conftest.py  test_admin_credentials.py  test_admin_sync_targets.py  test_admin_users_scope.py  test_admin_users_update.py  test_agent_context_runtime_feature_flag_migration.py  test_api_endpoints.py  test_api_health.py  test_api_sanitization.py  test_atlassian_ops_storage.py  test_audit_completeness.py  test_audit_index_migration.py  test_audit_perf.py  test_audit_rolling_aggregates.py  test_audit_schema.py  test_auth_db_check.py  test_backfill.py  test_backfill_fanout.py  test_backfill_integration.py  test_backfill_observability.py  test_base_connector.py  test_base_connector_semaphore.py  test_base_processor.py  test_batch_processing.py  test_batch_storage.py  test_benchmark_synthetic.py  test_billing.py  test_billing_audit.py  test_billing_emails.py  test_billing_emails_e2e.py  test_billing_plans.py  test_billing_seed.py  test_budget_calibration.py  test_budget_estimators.py  (+294 more)
v0.2.2/: index.html
v0.3.1/: 404.html
v0.4.0-alpha.1/: 404.html
v0.4.0-beta.3/: index.html
v1.0.0/: 404.html  index.html
work_graph/: builder.py  models.py  runner.py
workers/: celery_app.py  tasks.py
(+3106 files in other folders)
