[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-health-ops"
dynamic = ["version"]
description = "Open Source Development Team Operation Analytics"
readme = "README.md"
authors = [{ name = "Chris Geo", email = "chris@example.com" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
keywords = ["metrics", "git", "analytics", "developer-experience"]
requires-python = ">=3.10"
dependencies = [
  "tqdm",
  "sqlalchemy",
  "clickhouse-connect",
  "fastapi",
  "slowapi",
  "httpx",
  "psycopg2-binary",
  "asyncpg",
  "aiosqlite",
  "python-gitlab",
  "GitPython",
  "PyGithub>=2.1.0,<3.0.0",
  "requests",
  "pydantic>=2.7.0",
  "PyYAML",
  "typing_extensions",
  "jira",
  "alembic",
  "motor",
  "uvicorn",
  "radon",
  "openai",
  "anthropic",
  "strawberry-graphql[fastapi]",
  "celery[redis]>=5.3.0",
  "croniter>=1.3.0",
  "redis>=5.0.0",
  # Shared Atlassian client library (Jira REST/GraphQL)
  "atlassian-gen-client>=0.1.0b3",
  # Authentication
  "PyJWT>=2.8.0",
  "bcrypt>=4.0.0",
  "email-validator>=2.0.0",
  "PyNaCl>=1.5.0",
  "stripe>=7.0.0",
  "resend>=2.5.0",
  # Observability
  "python-json-logger>=2.0.7",
  "sentry-sdk[fastapi,celery]>=2.0.0",
  "prometheus-fastapi-instrumentator>=6.1.0",
  "prometheus-client>=0.20.0",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "opentelemetry-instrumentation-httpx>=0.45b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
  "opentelemetry-instrumentation-celery>=0.45b0",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "ruff",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-xdist>=3.8.0,<4.0.0",
  "fakeredis",
]
enterprise-sso = [
  "defusedxml>=0.7.0",
  "signxml>=3.0.0",
]

[project.urls]
Repository = "https://github.com/chrisgeo/dev-health-ops"
Issues = "https://github.com/chrisgeo/dev-health-ops/issues"

[project.scripts]
dev-health-ops = "dev_health_ops.cli:main"
dev-hops = "dev_health_ops.cli:main"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = [
  "src",
], exclude = [
  "tests*",
  "docs*",
  "examples*",
  "data*",
  "grafana*",
  "docker*",
  "dist*",
  "build*",
] } }
py-modules = ["cli", "investment_taxonomy", "storage", "utils"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["**/*.sql", "**/*.yaml", "**/*.yml", "**/*.json", "**/*.mako", "**/*.html", "**/*.txt"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
  ".git",
  ".venv",
  "venv",
  "__pycache__",
  "docs",
  "build",
  "dist",
  "migrations",
  "site",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E203", "E501"]
per-file-ignores = {"__init__.py" = ["F401"], "src/dev_health_ops/api/main.py" = ["E402"], "tests/test_ingest_streams.py" = ["E402"]}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
